# open62541-nodeset-loader

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  conanfile.txt  main.c  nodesetloader-config.cmake  runCppcheck.sh  runLcov.sh  travis_install_script.sh  travis_script.sh
.github/workflows/: ClangRelWithDebInfoAsan.yml  GccDebugMemcheck.yml  GccDebugMemcheck_WithoutMemberTypeIndex.yml  GccIntegrationTest.yml  Linter.yml  QuickTestsWithoutOpenBackend.yml  Release.yml  build_windows.yml  windows.yml
backend/: backend.h  dummy.c
backends/: CMakeLists.txt
backends/open62541/: CMakeLists.txt
backends/open62541/examples/: CMakeLists.txt  dataTypeImport.c  iterate.c  server.c
backends/open62541/include/: dataTypes.h  openBackend.h
backends/open62541/include/NodesetLoader/: backendOpen62541.h  dataTypes.h
backends/open62541/src/: DataTypeImporter.c  DataTypeImporter.h  RefServiceImpl.c  RefServiceImpl.h  ServerContext.c  ServerContext.h  Value.c  Value.h  base64.h  conversion.h  customDataType.c  customDataType.h  import.c  internal.h  nodeset_base64.h  padding.h  value.c  value.h
backends/open62541/src/include/: backend.h
backends/open62541/tests/: CMakeLists.txt  basestruct.xml  basicNodeClass.c  basicNodeClasses.c  basicNodeClasses.xml  check_nodeset_import.c  conversion.c  cornerCases.c  cornerCases.xml  customTypesWithValues.c  customTypesWithValues.xml  extendedstruct.xml  extension.c  extension.xml  import.c  issue266_TestData.NodeSet2.xml  issue_201.c  issue_201.xml  issue_241.c  issue_241.xml  issue_246.c  issue_246.xml  issue_246_2.c  issue_246_2.xml  issue_266_testdata.c  loading_order_fix.c  loading_order_fix.xml  multipleNamespaces.c  multipleNamespaces.xml  namespaceZeroValues.c  namespaceZeroValues.xml  newHierachicalRef.c  newHierachicalRef.xml  newHierachicalRef2.xml  nodeAttributes.c  nodeAttributes.xml  ns0_values.c  orderingStringNodeIds.c  orderingStringNodeIds.xml  primitiveValues.c  (+13 more)
backends/open62541/tests/dataTypeImport/: CMakeLists.txt  abstractdatatypemember.bsd  abstractdatatypemember.csv  abstractdatatypemember.xml  bytestring.c  bytestring.xml  compareAbstractDataTypeMember.c  compareDITypes.c  compareInverseHasEncoding.c  compareOptionset.c  compareStructExtended.c  compareStructSpecialized.c  compareStructTypes.c  compareUnion.c  emptyStructs.c  emptyStructs.xml  enum.c  enum.xml  inverseHasEncoding.xml  optionalStruct.c  optionalstruct.bsd  optionalstruct.csv  optionalstruct.xml  optionset.bsd  optionset.c  optionset.csv  optionset.xml  padding.c  specializedstruct.bsd  specializedstruct.csv  specializedstruct.xml  struct.bsd  struct.c  struct.csv  struct.xml  structExtended.bsd  structExtended.csv  structExtended.xml  structwitharray.bsd  structwitharray.csv  (+7 more)
backends/open62541/tests/integration/: CMakeLists.txt  start_test.sh
backends/open62541/tests/integration/"Output/"/: referenceServerClientOutput.txt
backends/open62541/tests/integration/client/: CMakeLists.txt  browse_utils.cpp  browse_utils.h  client.cpp  common_defs.h  operator_ov.cpp  operator_ov.h  sort_utils.cpp  sort_utils.h  utils.cpp  utils.h  value_utils.cpp  value_utils.h  value_utils_mock.cpp
backends/open62541/tests/integration/reference_server/: CMakeLists.txt  server.cpp
backends/open62541/tests/integration/test_server/: CMakeLists.txt  server.cpp
backends/stdout/: CMakeLists.txt
backends/stdout/examples/: CMakeLists.txt  backend.h  csv.c  dump.c  main.c
cmake/: FindCheck.cmake
coverage/: CMakeLists.txt
include/: nodesetLoader.h  xmlparser.h
include/NodesetLoader/: Extension.h  Logger.h  NodeId.h  NodesetLoader.h  ReferenceService.h  TNodeId.h  arch.h
include/nodesetLoader/: NodesetLoader.h  TNodeId.h  nodesetLoader.h
nodesets/: testNodeset100nodes.xml
nodesets/euromap/: Opc.Ua.PlasticsRubber.GeneralTypes.NodeSet2.bsd  Opc.Ua.PlasticsRubber.GeneralTypes.NodeSet2.csv  Opc.Ua.PlasticsRubber.GeneralTypes.NodeSet2.xml  Opc.Ua.PlasticsRubber.IMM2MES.NodeSet2.bsd  Opc.Ua.PlasticsRubber.IMM2MES.NodeSet2.xml  euromapinstances.xml
nodesets/euromap_instances/: euromapinstances.csv  euromapinstances.tt2pro  euromapinstances.xml
nodesets/open62541/: Opc.Ua.Di.NodeSet2_invalid_ordering.xml  testnodeset.xml
nodesets/struct_union_optionset/: structtest.bsd  structtest.csv  structtest.tt2pro  structtest.xml  structtest.xsd
src/: AliasList.c  AliasList.h  CharAllocator.c  CharAllocator.h  InternalLogger.h  InternalRefService.c  InternalRefService.h  NamespaceList.c  NamespaceList.h  Node.c  Node.h  NodeContainer.c  NodeContainer.h  NodeId.c  Nodeset.c  Nodeset.h  NodesetLoader.c  Parser.c  Parser.h  PrintfLogger.c  RefService.c  Sort.c  Sort.h  TNodeId.c  Value.c  Value.h  charAllocator.c  charAllocator.h  nodeset.c  nodeset.h  nodesetLoader.c  sort.c  sort.h  util.h  xmlparser.c
src/nodes/: DataTypeNode.c  DataTypeNode.h  InstanceNode.c  Node.c  Node.h  NodeContainer.c  NodeContainer.h
tests/: CMakeLists.txt  NodeContainer.c  NodeId.c  TNodeId.c  ValueTest.c  allocator.c  basicNodeClasses.xml  check_sort.c  check_sort.cpp  invalidNodeDefinitions.xml  parser.c  sort.c
tests/integrationTests/: integrationTests.sh
