set(NODESETLOADER_BACKEND_OPEN62541_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/import.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/DataTypeImporter.c
    PARENT_SCOPE)

set(NODESETLOADER_BACKEND_OPEN62541_PUBLIC_INCLUDES
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
    PARENT_SCOPE)

set(NODESETLOADER_BACKEND_OPEN62541_PRIVATE_INCLUDES
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    PARENT_SCOPE)

set(NODESETLOADER_BACKEND_OPEN62541_DEPS_LIBS "" PARENT_SCOPE)

set(NODESETLOADER_BACKEND_OPEN62541_PUBLIC_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/include/NodesetLoader/backendOpen62541.h
    PARENT_SCOPE)

if(${ENABLE_TESTING})
    add_subdirectory(tests)
endif()
if(${ENABLE_EXAMPLES})
    add_subdirectory(examples)
endif()
